[package]
name = "tonapi-rs"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["S. Suprun <hello@syoma.website>"]

[dependencies]
async-trait = { version = "0.1.83" }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132" }
tracing = { version = "0.1.40" }

[dev-dependencies]
httpmock = { version = "0.7.0" }
tokio = { version = "1.41.1" }
